--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,39 @@
-body {
+/* Import Google fonts */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* box-sizing: border-box; */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+li {
+  list-style: none;
+}
+
+/* Saving colors to variables */
+:root {
+  --text-color: #2e2626;
+  --dark-color: #393e46;
+  --background-color: rgba(118, 234, 215, 0.05);
+  --font-size: min(max(0.8rem, 4vw), 1rem);
+}
+
+html,
+body {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  color: var(--text-color);
+  font-size: var(--font-size);
+  background: var(--background-color);
+}
+
+input:active,
+input:focus,
+button:active,
+button:focus {
+  outline: none;
 }
