--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,39 +1,160 @@
 /* Import Google fonts */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 * {
   padding: 0;
   margin: 0;
-  /* box-sizing: border-box; */
 }
 
 li {
   list-style: none;
 }
 
-/* Saving colors to variables */
+ .links {
+   text-decoration: none;
+ }
+
+ button {
+   outline: none;
+ }
+
+ fieldset {
+   border: 0;
+ }
+
+ input {
+  font-size: 16px
+ }
+
+/* declaring variables */
+
 :root {
-  --text-color: #2e2626;
-  --dark-color: #393e46;
-  --background-color: rgba(118, 234, 215, 0.05);
-  --font-size: min(max(0.8rem, 4vw), 1rem);
+  --ff-sans: Arial,"Helvetica Neue",Helvetica,sans-serif;
+  --ff-serif: Georgia,Times New Roman,Times,serif;
+  --ff-mono: Consolas,Menlo,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New,monospace,sans-serif;
+  --font-family: var(--ff-sans);
+
+  --white: #fff;
+  --black: #0c0d0e;
+  --orange: #f48024;
+  --yellow: #fbf2d4;
+  --green: #5eba7d;
+  --blue: #0077cc;
+  --powder: #e1ecf4;
+  --red: #d1383d;
+ 
+  --black-200: #ecf2f8;
+  --black-300: #9fa6ad;
+  --black-350: #9199a1;
+  --black-400: #848d95;
+  --black-500: #6a737c;
+  --black-600: #535a60;
+  --black-700: #3c4146;
+  --black-750: #2f3337;
+  --black-800: #242729;
+  --black-900: #0c0d0e;
+
+  --orange-300: #f7aa6d;
+  --orange-400: #f48024;
+  --orange-500: #f2720c;
+  --orange-600: #da670b;
+  --orange-700: #bd5c00;
+  --orange-800: #a35200;
+  --orange-900: #874600;
+
+  --blue-050: #f2f9ff;
+  --blue-100: #cfeafe;
+  --blue-200: #addafc;
+  --blue-300: #6cbbf7;
+  --blue-400: #379fef;
+  --blue-500: #0095ff;
+  --blue-600: #0077cc;
+  --blue-700: #0064bd;
+  --blue-800: #0054a3;
+  --blue-900: #004487;
+
+  --powder-050: #f4f8fb;
+  --powder-100: #e1ecf4;
+  --powder-200: #d1e5f1;
+  --powder-300: #b3d3ea;
+  --powder-400: #a0c7e4;
+  --powder-500: #7aa7c7;
+  --powder-600: #5b8db1;
+  --powder-700: #39739d;
+  --powder-800: #2c5777;
+  --powder-900: #1e3c52;
+
+  --green-025: #eef8f1;
+  --green-050: #dcf0e2;
+  --green-100: #cae8d4;
+  --green-200: #a6d9b7;
+  --green-300: #82ca9a;
+  --green-400: #5eba7d;
+  --green-500: #48a868;
+  --green-600: #3d8f58;
+  --green-700: #2f6f44;
+  --green-800: #29603b;
+  --green-900: #1e472c;
+
+  --yellow-050: #fdf7e3;
+  --yellow-100: #fbf2d4;
+  --yellow-200: #f1e5bc;
+  --yellow-300: #e6d178;
+  --yellow-400: #e9c63f;
+  --yellow-500: #ddb624;
+  --yellow-600: #cea51b;
+  --yellow-700: #b89516;
+  --yellow-800: #9f8010;
+  --yellow-900: #826a0b;
+
+  --red-050: #fdf3f4;
+  --red-100: #f9d3d7;
+  --red-200: #f4b4bb;
+  --red-300: #e87c87;
+  --red-400: #de535e;
+  --red-500: #d1383d;
+  --red-600: #c02d2e;
+  --red-700: #ac2726;
+  --red-800: #942121;
+  --red-900: #7a1819;
+
+  --gold: #ffcc01;
+  --gold-lighter: #fff4d1;
+  --gold-darker: #f1b600;
+  --silver: #b4b8bc;
+  --silver-lighter: #e8e8e8;
+  --silver-darker: #9a9c9f;
+  --bronze: #caa789;
+  --bronze-lighter: #f2e9e1;
+  --bronze-darker: #ab825f;
+  --fc-dark: #0c0d0e;
+  --fc-medium: #3c4146;
+  --fc-light: #6a737c;
+ 
+  --scrollbar: rgba(0,0,0,0.2);
+  --highlight-bg: #f6f6f6;
+  --highlight-color: #2f3337;
+  --highlight-comment: #656e77;
+  --highlight-punctuation: var(--black-600);
+  --highlight-namespace: #b75501;
+  
+  --highlight-symbol: #803378;
+  --highlight-keyword: #015692;
+  --highlight-variable: #54790d;
+  --highlight-addition: #2f6f44;
+  --highlight-deletion: #c02d2e;
+
+  --font-color: var(--black-800);
 }
 
-html,
 body {
   scroll-behavior: smooth;
+  color: var(--font-color);
+  font-family: var(--font-family);
+  font-size: 13px;
+  background: var(--white);
 }
 
-body {
-  font-family: 'Montserrat', sans-serif;
-  color: var(--text-color);
-  font-size: var(--font-size);
-  background: var(--background-color);
-}
-
-input:active,
-input:focus,
-button:active,
-button:focus {
+input:active, input:focus, button:active, button:focus {
   outline: none;
 }
