--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,34 +6,46 @@
   margin: 0;
 }
 
-li {
+ol, ul {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
- .links {
-   text-decoration: none;
- }
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 
- button {
-   outline: none;
- }
+.links, a {
+  text-decoration: none;
+}
 
- fieldset {
-   border: 0;
- }
+button {
+  outline: none;
+}
 
- input {
-  font-size: 16px
- }
+fieldset {
+  border: 0;
+}
+
+input {
+  font-size: 16px;
+  outline: none;
+}
+
+img {
+  max-width: 100%;
+}
 
 /* declaring variables */
 
 :root {
-  --ff-sans: Arial,"Helvetica Neue",Helvetica,sans-serif;
-  --ff-serif: Georgia,Times New Roman,Times,serif;
-  --ff-mono: Consolas,Menlo,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New,monospace,sans-serif;
+  --ff-sans: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  --ff-serif: Georgia, Times New Roman, Times, serif;
+  --ff-mono: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, sans-serif;
   --font-family: var(--ff-sans);
-
   --white: #fff;
   --black: #0c0d0e;
   --orange: #f48024;
@@ -42,8 +54,12 @@ li {
   --blue: #0077cc;
   --powder: #e1ecf4;
   --red: #d1383d;
- 
-  --black-200: #ecf2f8;
+  --black-025: #fafafb;
+  --black-050: #eff0f1;
+  --black-075: #e4e6e8;
+  --black-100: #d6d9dc;
+  --black-150: #c8ccd0;
+  --black-200: #d0d4d8;
   --black-300: #9fa6ad;
   --black-350: #9199a1;
   --black-400: #848d95;
@@ -53,7 +69,6 @@ li {
   --black-750: #2f3337;
   --black-800: #242729;
   --black-900: #0c0d0e;
-
   --orange-300: #f7aa6d;
   --orange-400: #f48024;
   --orange-500: #f2720c;
@@ -61,7 +76,6 @@ li {
   --orange-700: #bd5c00;
   --orange-800: #a35200;
   --orange-900: #874600;
-
   --blue-050: #f2f9ff;
   --blue-100: #cfeafe;
   --blue-200: #addafc;
@@ -72,7 +86,6 @@ li {
   --blue-700: #0064bd;
   --blue-800: #0054a3;
   --blue-900: #004487;
-
   --powder-050: #f4f8fb;
   --powder-100: #e1ecf4;
   --powder-200: #d1e5f1;
@@ -83,7 +96,6 @@ li {
   --powder-700: #39739d;
   --powder-800: #2c5777;
   --powder-900: #1e3c52;
-
   --green-025: #eef8f1;
   --green-050: #dcf0e2;
   --green-100: #cae8d4;
@@ -95,7 +107,6 @@ li {
   --green-700: #2f6f44;
   --green-800: #29603b;
   --green-900: #1e472c;
-
   --yellow-050: #fdf7e3;
   --yellow-100: #fbf2d4;
   --yellow-200: #f1e5bc;
@@ -106,7 +117,6 @@ li {
   --yellow-700: #b89516;
   --yellow-800: #9f8010;
   --yellow-900: #826a0b;
-
   --red-050: #fdf3f4;
   --red-100: #f9d3d7;
   --red-200: #f4b4bb;
@@ -117,7 +127,6 @@ li {
   --red-700: #ac2726;
   --red-800: #942121;
   --red-900: #7a1819;
-
   --gold: #ffcc01;
   --gold-lighter: #fff4d1;
   --gold-darker: #f1b600;
@@ -130,31 +139,45 @@ li {
   --fc-dark: #0c0d0e;
   --fc-medium: #3c4146;
   --fc-light: #6a737c;
- 
-  --scrollbar: rgba(0,0,0,0.2);
+  --scrollbar: rgba(0, 0, 0, 0.2);
   --highlight-bg: #f6f6f6;
   --highlight-color: #2f3337;
   --highlight-comment: #656e77;
   --highlight-punctuation: var(--black-600);
   --highlight-namespace: #b75501;
-  
   --highlight-symbol: #803378;
   --highlight-keyword: #015692;
   --highlight-variable: #54790d;
   --highlight-addition: #2f6f44;
   --highlight-deletion: #c02d2e;
+  --font-color: var(--black-600);
+}
 
-  --font-color: var(--black-800);
+html {
+  min-width: auto;
 }
 
 body {
-  scroll-behavior: smooth;
+  margin: 0;
   color: var(--font-color);
   font-family: var(--font-family);
   font-size: 13px;
   background: var(--white);
+  max-width: 100%;
+  padding-top: 50px;
+  min-height: 100%;
+  background-image: none;
 }
 
 input:active, input:focus, button:active, button:focus {
   outline: none;
+}
+
+.custom-btn {
+  color: var(--blue-900);
+  background: var(--blue-100);
+  border: 1px solid var(--blue-900);
+  border-radius: 3px;
+  text-align: center;
+  cursor: pointer;
 }
