--- a/client/src/pages/questions/AllQuestions.css
+++ b/client/src/pages/questions/AllQuestions.css
@@ -4,14 +4,7 @@
     background-color: #fff;    
 }
 
-.notify-container {
-    position: fixed;
-    left: 0;
-    top: 0;
-    height: 0;
-    z-index: 5051;
-    flex: 1 0 auto;
-}
+
 
 .custom-header {
     display: none;
@@ -28,7 +21,7 @@
     box-shadow: 0 0 0 rgb(12 13 14 / 5%);
 }
 
-.content {
+.contessnt {
     max-width: 1100px;
     display: flex;
     flex: 1 1 auto;
