--- a/client/src/pages/questions/AllQuestions.css
+++ b/client/src/pages/questions/AllQuestions.css
@@ -1,27 +1,17 @@
-.questions-page{
-    display: flex;    
-    flex-direction: column;    
-    background-color: #fff;    
+.questions-page{    
+    height: 100%;
+    top: 0;
+    left: 35vh;
+    right: 50vh;
+    position:absolute;
+    padding-top: 2rem;
 }
-
-
 
 .custom-header {
     display: none;
 }
 
-.container{
-    max-width: 1264px;
-    flex: 1 0 auto;
-    display: flex; 
-}
-
-.left-sidebar {
-    flex: 0 0 164px;
-    box-shadow: 0 0 0 rgb(12 13 14 / 5%);
-}
-
-.contessnt {
+.content {
     max-width: 1100px;
     display: flex;
     flex: 1 1 auto;
