--- a/client/src/pages/mainContainer/mainConatiner.css
+++ b/client/src/pages/mainContainer/mainConatiner.css
@@ -18,7 +18,7 @@
     position: relative;
     height: 100%;
     width: 100%;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 
 .main-sidebar{
