--- a/client/src/pages/AllQuestions.css
+++ b/client/src/pages/AllQuestions.css
@@ -117,7 +117,7 @@
     border-bottom-width: 0;
     border-left-width: 1px;
     border-right-width: 0;
-    box-sizing: border-box;
+    box-sizing: border-box;;
 }
 
 /** Media query for tablets */
