--- a/client/src/component/Auth/SignupLoginForm.css
+++ b/client/src/component/Auth/SignupLoginForm.css
@@ -18,7 +18,6 @@
     border-radius: 50px;
     margin-top: 15px;
     background: var(--black-050);
-    width: 100%;
     max-width: 450px;
     display: grid;
     grid-template-columns: 3rem auto;
@@ -33,13 +32,13 @@
     font-size: 1.1rem;
     color: #333;
     width: 100%;
+    box-shadow: none;
 }
 
 .auth-form fieldset i {
     text-align: center;
-    line-height: 50px;
+    line-height: 40px;
     color: #acacac;
-    transition: 0.5s;
     font-size: 1.1rem;
 }
 
