--- a/client/src/index.css
+++ b/client/src/index.css
@@ -180,6 +180,15 @@ body {
   background-image: none;
 }
 
+[placeholder]:focus::-webkit-input-placeholder {
+    color: transparent;
+}
+
+[placeholder]:focus::-webkit-input-placeholder {
+    transition: opacity 0.5s 0.5s ease;
+    opacity: 0;
+} 
+
 input:active,
 input:focus,
 button:active,
