--- a/client/src/pages/auth/SignUpLogin.css
+++ b/client/src/pages/auth/SignUpLogin.css
@@ -5,6 +5,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
+    position: relative;
     z-index: 1;
     overflow: hidden;
 }
@@ -23,55 +24,58 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    transition: transform 1.9s ease-in-out;
+    transition: transform 1.8s ease-in-out;
     transition-delay: 0.6s;
     height: 100%;
     width: 100%;
     position: relative;
-    z-index: 3;
+    z-index: 10;
 }
 
 .panel-image {
     width: 100%;
-    transition: transform 1.1s ease-in-out;
-    transition-delay: 0.4s;
 }
 
 .panel div {
     width: 100%;
     margin-top: 40px;
-    position: relative;
-    z-index: 5;
 }
 
 .panel p {
-    color: var(--blue-900);
-    font-size: 1.2rem;
+    color:white;
+    font-size: large;
 }
 
 .panel button {
-    width: 13rem;
-    height: 40px;
+    padding: 0.4rem 1.5rem;
     font-weight: 600;
     font-size: 0.9rem;
-    border: 2.5px solid var(--blue-900);
+    border: 2.5px solid white;
+    color:white;
     border-radius: 50px;
     background: none;
     margin: 10px;
     cursor: pointer;
+    position: relative;
+    z-index: 12;
 }
 
 .auth-forms-container {
     position: absolute;
     top: 0;
     left: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
+    width: 100%;  
+    height: 100%; 
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
 
+.signin-form-wrapper,
+.signup-form-wrapper {
+    z-index: 4;
+    transition: opacity 1.6s ease-in-out;
+    transition-delay: 0.6s;
+}
 
 /* Set container class top Signup mode */
 .signup-mode .left-panel {
@@ -104,5 +108,22 @@
 .signin-mode .auth-forms-container .signin-form-wrapper {
     position: relative;
     opacity: 1;
-    z-index: 4;
 }
+
+.authentication-page-wrapper:before {
+    content: "";
+    position: absolute;
+    height: 1000px;
+    width: 2000px;
+    top: -10%;
+    left: 48%;
+    transform: translateY(-50%);
+    background-image: linear-gradient(-45deg, #4481eb 0%, #04befe 100%);
+    transition: 1.8s ease-in-out;
+    border-radius: 50%;
+    z-index: 5;
+  }
+
+  .signin-mode:before {
+    transform: translate(-100%, -50%);
+  }
