--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,14 @@
 .App {
-  text-align: center;
+  /* text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
   z-index: 0;
   position: relative;
+  box-sizing: border-box;
+  height: 100%;
+  width: 100%;
 }
 
 .App-logo {
@@ -22,10 +25,10 @@
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
+  /* flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -38,6 +41,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
