--- a/client/src/component/Questions/Question.css
+++ b/client/src/component/Questions/Question.css
@@ -2,7 +2,7 @@
     display: flex;
     border-top: 1px solid var(--black-100);
     /*margin-top: 10px;*/
-    width: 100%;
+    /* width: 100%; */
     z-index: 5;
 }
 
