--- a/client/src/component/SideBar/LeftSideBar.css
+++ b/client/src/component/SideBar/LeftSideBar.css
@@ -1,20 +1,171 @@
-.leftBarItems {
-    margin: 0 auto;
-    text-align: left;
+.hidden,
+.mobileDropDownMenu {
+    display: none;
+}
+
+.asideLeftWrapper {
+    position: fixed;
+    top: 50px;
+    width: 11rem;
     height: 100%;
+    border-right: 2px solid var(--shadow);
+    overflow: hidden;
+    min-width: 10rem;
 }
 
-.bar-item {
-    padding: 15px;
+.asideLeft {
+    height: 100%;
+    display: grid;
+    grid-template-rows: repeat(2, 50%);
+}
+
+.asideLeftTop {
+    display: flex;
+    flex-direction: column;
+    margin: 0.9rem 0 0 0;
+}
+
+.asideTab {
+    text-align: left;
+    font-size: 0.8rem;
     cursor: pointer;
+    outline: none;
+    padding: 0.7rem 0 0.7rem 0.7rem;
 }
 
-.bar-item:active {
-    background: var(--black-050);
-    border-right: 3px solid var(--orange);
+.asideTab:nth-child(2),
+.asideTab:nth-child(3) {
+    padding-left: 0;
 }
 
-.bar-item:focus {
-    background: var(--black-050);
-    border-right: 3px solid var(--orange);
-  }
+.asideTab:nth-child(2)>.pqTab span {
+    height: 1rem;
+    width: 1rem;
+    display: inline-block;
+    border-radius: 50%;
+    margin-right: 5px;
+    line-height: inherit;
+    text-align: center;
+    font-size: 1rem;
+}
+
+.asideTab:nth-child(2)>.pqTab {
+    outline: none;
+    padding-left: 0.7rem;
+}
+
+.pqTab:nth-child(2) {
+    padding: 0.7rem;
+}
+
+.pqTab>li {
+    outline: none;
+    padding: 0.5rem 0 0.5rem 1.5rem;
+}
+
+.asideTab:nth-child(3)>.clTab {
+    padding-left: 0.7rem;
+}
+
+.clTab:nth-child(2) {
+    display: flex;
+    padding: 0.7rem 0;
+    justify-content: flex-start;
+    align-items: center;
+    outline: none;
+}
+
+.clTab:nth-child(1) span {
+    display: inline-block;
+    margin-left: 1.9rem;
+    line-height: inherit;
+    font-size: 1rem;
+}
+
+.clTab:nth-child(2) span {
+    height: 1rem;
+    width: 1rem;
+    background: var(--orange);
+    display: inline-block;
+    border-radius: 50%;
+    margin-right: 5px;
+    color: white;
+    line-height: inherit;
+    text-align: center;
+}
+
+.asideBottom {
+    flex: 12% 0 0;
+    height: 40%;
+    border-top: 2px solid var(--shadow);
+    border-bottom: 2px solid var(--shadow);
+    border-left: 2px solid var(--shadow);
+    display: grid;
+    grid-template-rows: 1fr 2fr 0.5fr;
+    padding: 0.3rem;
+}
+
+.asideBottom p {
+    font-size: 0.8rem;
+    text-align: left;
+    margin-top: 0.5rem;
+}
+
+.asideBottom p span {
+    font-weight: bold;
+}
+
+.asideBottom div {
+    padding-top: 0.5rem 0;
+}
+
+.asideBottom button {
+    padding: 0.3rem;
+    width: 8rem;
+    font-size: 0.7rem;
+    color: var(--white);
+    background: var(--orange);
+    border-radius: 3px;
+    border: none;
+}
+
+.asideBottom div>div {
+    padding: 0.5rem 0.3rem;
+    font-size: 0.7rem;
+}
+
+/* .leftNavLink:focus,
+.leftNavLink:active {
+    background: var(--grey-dark);
+    color: black;
+    font-weight: bolder;
+    border-right: 3.5px solid #f48024;
+} */
+
+.leftNavLink>.link {
+    text-decoration: none;
+    outline: none;
+    color: var(--font-color);
+}
+
+@media screen and (max-width: 630px) {
+
+    .hidden,
+    .asideLeftWrapper {
+        display: none;
+    }
+
+    .mobileDropDownMenu {
+        position: fixed;
+        top: 52px;
+        left: 0;
+        width: 14rem;
+        height: 85%;
+        border-right: 2px solid var(--shadow);
+        min-width: 11rem;
+        display: block;
+        background: white;
+        overflow: auto;
+    }
+
+}
