--- a/client/src/pages/auth/SignUpLogin.css
+++ b/client/src/pages/auth/SignUpLogin.css
@@ -7,7 +7,8 @@
     height: 100%;
     position: relative;
     z-index: 1;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-Y: hidden;
 }
 
 .panel-container {
@@ -33,16 +34,18 @@
 }
 
 .panel-image {
-    width: 100%;
+    width: 80%;
+    height: 100%;
 }
 
 .panel div {
-    width: 100%;
+    width: 50%;
     margin-top: 40px;
+    text-align: center;
 }
 
 .panel p {
-    color:white;
+    color: white;
     font-size: large;
 }
 
@@ -51,7 +54,7 @@
     font-weight: 600;
     font-size: 0.9rem;
     border: 2.5px solid white;
-    color:white;
+    color: white;
     border-radius: 50px;
     background: none;
     margin: 10px;
@@ -64,8 +67,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;  
-    height: 100%; 
+    width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
@@ -94,11 +97,11 @@
 
 /* Set container class top Signin mode */
 .signin-mode .panel-container .right-panel {
-    transform: translateX(700px);
+    transform: translateY(700px);
 }
 
 .signin-mode .panel-container .left-panel {
-    transform: translateX(0%);
+    transform: translateY(0%);
 }
 
 .signin-mode .auth-forms-container .signup-form-wrapper {
@@ -106,24 +109,98 @@
 }
 
 .signin-mode .auth-forms-container .signin-form-wrapper {
-    position: relative;
     opacity: 1;
 }
 
 .authentication-page-wrapper:before {
     content: "";
     position: absolute;
-    height: 1000px;
-    width: 2000px;
-    top: -10%;
+    height: 3000px;
+    width: 3000px;
+    top:-500px;
     left: 48%;
     transform: translateY(-50%);
     background-image: linear-gradient(-45deg, #4481eb 0%, #04befe 100%);
     transition: 1.8s ease-in-out;
     border-radius: 50%;
     z-index: 5;
-  }
+}
 
-  .signin-mode:before {
-    transform: translate(-100%, -50%);
-  }
+.signin-mode:before {
+    transform: translate(-100%, -40%);
+}
+
+
+@media screen and (max-width:530px) {
+    .authentication-page-wrapper {
+        overflow: hidden;
+    }
+
+    .panel-container {
+        position: relative;
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2, 1fr);
+    }
+
+    .auth-forms-container {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2, 1fr);
+    }
+
+    .panel div {
+        margin-top: 20px;
+    }
+
+    .panel-image {
+        height: 100%;
+    }
+
+    .panel p {
+        font-size: 1rem;
+    }
+
+    /* Set container class top Signup mode */
+    .signup-mode .left-panel {
+        transform: translateY(-700px);
+    }
+
+    .signup-mode .right-panel {
+        transform: translateY(100px);
+    }
+
+    .signup-mode .signin-form-wrapper {
+        opacity: 0;
+    }
+
+    /* Set container class top Signin mode */
+    .signin-mode .panel-container .right-panel {
+        transform: translateY(700);
+    }
+
+    .signin-mode .panel-container .left-panel {
+        transform: translateY(0);
+    }
+
+    .signin-mode .auth-forms-container .signup-form-wrapper {
+        opacity: 0;
+    }
+
+    .signin-mode .auth-forms-container .signin-form-wrapper {
+        opacity: 1;
+        transform: translateY(-40px);
+    }
+
+    .authentication-page-wrapper:before {
+        top: 0;
+        left: -13rem;
+        width: 50rem;
+        height: 1500px;
+        transform: translateY(420px);
+    }
+
+    .signin-mode:before {
+        transform: translateY(-1300px);
+    }
+}
