--- a/client/src/component/Questions/Question.css
+++ b/client/src/component/Questions/Question.css
@@ -1,88 +1,87 @@
 .question-summary {
     display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 0.5rem;
     border-top: 1px solid var(--black-100);
-    /*margin-top: 10px;*/
-    /* width: 100%; */
+    width: 100%;
     z-index: 5;
 }
 
 .summary {
     display: flex;
     flex-direction: column;
-    align-items: center;
-}
-.votes,
-.answers,
-.views {
-    padding: 18px 10px 10px 10px;
+    gap: 1rem;
+    height: 100%;
+    padding: 1rem;
 }
 
-.votes span {
-    font-size: 2rem;
-    padding: 10px;
-}
-
-.answers span {
-    font-size: 1rem;
-    padding: 10px;
-}
-.views {
-    color: var(--red-500);
+.summary>div {
+    display: flex;
+    justify-content: flex-end;
+    gap: 0.5rem;
 }
 
 .question {
     display: flex;
     flex-direction: column;
-    padding-top: 10px;
     text-align: left;
+    height: 100%;
+    padding: 1rem;
 }
 
-.title {
+.question .title {
     color: var(--blue-600);
     text-decoration: none;
     font-size: 18px;
 }
 
-.question-body {
+.question>p {
     padding: 10px 0 10px 0;
 }
 
-.tags li {
-    display: inline;
+.question>div,
+.question>div>ul {
+    display: flex;
+    gap: 0.5rem;
+    flex-wrap: nowrap;
+}
+
+.question>div>ul {
+    margin-right: auto;
+}
+
+.question>div>ul>li {
     background: var(--blue-100);
     color: var(--blue-600);
-    font-size: 10px;
-    margin: 0 5px 0 5px;
-    padding: 3px 6px 3px 6px;
+    font-size: 0.9rem;
+    padding: 0.2rem 0.4rem;
     border-radius: 3px;
 }
 
-@media screen and (max-width: 480px) {
+
+@media screen and (max-width: 1080px) {
     .question-summary {
-        display: flex;
-        height: 11rem;
-        margin-left: 5px;
+        flex-direction: column;
+        gap: 0rem;
     }
 
     .summary {
-        width: 9rem;
-        margin: 0px 6px 0px 6px;
+        flex-direction: row;
+        padding: 1rem  0.9rem 0;
     }
- 
 
-    .question {
-        padding-top: 10px;
-        text-align: left;
+    .summary>div {
+        text-align: end;
+        gap: 0.3rem;
     }
     
-    .title {
-        color: var(--blue-600);
-        text-decoration: none;
-        font-size: 15px;
+    .question {
+        padding: 0.5rem  0.9rem;
     }
 
-    .question-body {
-        padding: 10px 10px 10px 0;
+    .question-meta {
+        display: flex;
+        flex-direction: column;
     }
-
 }
