--- a/client/src/component/Questions/QuestionsList.css
+++ b/client/src/component/Questions/QuestionsList.css
@@ -1,14 +1,33 @@
-
-
-
-.questions-wrapper {
-    background:gold ;
+.questionsListWrapper {
+    display: flex;
+    margin: o;
+    padding: 0;
+    text-align: center;
+    flex-wrap: wrap;
 }
 
-.aside-right {
-    box-sizing: border-box;
-    position: relative;
-    z-index: 3;
-    background:rgb(0, 255, 238) ;
+.questionsListWrapper>div {
+    width: 100%;
+    height: 100%;
+}
 
+.questionsListWrapper>div>header {
+    height: 10rem;
+}
+
+
+.questionsListWrapper>aside {
+    height: 100%;
+    width: 100%;
+}
+
+/* Media Screens */
+@media all and (min-width: 700px) {
+    .questionsListWrapper>div {
+        flex: 1 70%;
+    }
+
+    .questionsListWrapper>aside {
+        flex: 1 30%;
+    }
 }
